feat: configured devops project, test

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ RELEASE_ID_GREEN=green-v1.0.0
 
 # Application port (internal)
 PORT=3000
+
+# Nginx template variables (computed based on ACTIVE_POOL)
+BLUE_BACKUP=backup
+GREEN_BACKUP=
