--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf.template:/etc/nginx/templates/default.conf.template:ro
+    environment:
+      - BLUE_BACKUP=${BLUE_BACKUP:-}
+      - GREEN_BACKUP=${GREEN_BACKUP:-backup}
     depends_on:
       - app_blue
       - app_green
     networks:
       - app_network
-    command: ["nginx", "-g", "daemon off;"]
 
   app_blue:
     image: ${BLUE_IMAGE}
