--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Container images
-BLUE_IMAGE=ghcr.io/hngprojects/hng_boilerplate_nodejs_web:blue
-GREEN_IMAGE=ghcr.io/hngprojects/hng_boilerplate_nodejs_web:green
+# App Images
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 
 # Active pool (blue or green)
 ACTIVE_POOL=blue
@@ -9,9 +9,28 @@ ACTIVE_POOL=blue
 RELEASE_ID_BLUE=blue-v1.0.0
 RELEASE_ID_GREEN=green-v1.0.0
 
-# Application port (internal)
+# Optional: Port configuration
 PORT=3000
 
 # Nginx template variables (computed based on ACTIVE_POOL)
-BLUE_BACKUP=backup
-GREEN_BACKUP=
+BLUE_BACKUP=
+GREEN_BACKUP=backup
+
+# ============================================
+# STAGE 3: Observability & Alerts
+# ============================================
+
+# Slack Webhook URL (Get from: https://api.slack.com/messaging/webhooks)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Error rate threshold (percentage)
+ERROR_RATE_THRESHOLD=2
+
+# Sliding window size (number of requests)
+WINDOW_SIZE=200
+
+# Alert cooldown period (seconds)
+ALERT_COOLDOWN_SEC=300
+
+# Maintenance mode (set to true to suppress alerts during planned changes)
+MAINTENANCE_MODE=false
